Fix icon colours in high contrast mode

--- a/packages/nhsuk-frontend/src/nhsuk/components/card/_index.scss
+++ b/packages/nhsuk-frontend/src/nhsuk/components/card/_index.scss
@@ -236,6 +236,10 @@ $card-border-hover-colour: $nhsuk-card-border-hover-colour;
     &:has(.nhsuk-card__heading a:hover) .nhsuk-icon,
     &:has(.nhsuk-card__link:hover) .nhsuk-icon {
       fill: $nhsuk-link-hover-colour;
+
+      @media screen and (forced-colors: active), (-ms-high-contrast: active) {
+        fill: linktext;
+      }
     }
 
     &:active,
@@ -249,6 +253,10 @@ $card-border-hover-colour: $nhsuk-card-border-hover-colour;
     &:has(.nhsuk-card__heading a:active) .nhsuk-icon,
     &:has(.nhsuk-card__link:active) .nhsuk-icon {
       fill: $nhsuk-link-active-colour;
+
+      @media screen and (forced-colors: active), (-ms-high-contrast: active) {
+        fill: activetext;
+      }
     }
   }
 
@@ -553,6 +561,10 @@ $card-border-hover-colour: $nhsuk-card-border-hover-colour;
 
       fill: $nhsuk-link-colour;
       @include nhsuk-responsive-spacing(5, "right");
+
+      @media screen and (forced-colors: active), (-ms-high-contrast: active) {
+        fill: buttontext;
+      }
     }
   }
 
